modules/security/main.tf
resource "aws_security_group" "no_inbound" {
  name        = "sg_no_inbound"
  description = "Zero-inbound; allow all egress"
  vpc_id      = var.vpc_id

  egress { 
    from_port = 0
    to_port = 0 
    protocol = "-1" 
    cidr_blocks = ["0.0.0.0/0"] 
  }

  tags = merge(var.tags, { Name = "sg-no-inbound" })
}

resource "aws_security_group" "web" {
  name        = "sg_web"
  description = "Web SG: allow 80/22 inbound, all egress"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # แนะนำล็อก 22 เป็น IP บ้าน/สำนักงานจะปลอดภัยกว่า:
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, { Name = "sg-web" })
}
